--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="index.js"></script>
     <title>Visital</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    
+    <div class="email-form">
+        <form name="contact" method="POST" netlify>
+            <p>
+                <label>Email:
+                    <input type="text" name="name" />
+                </label>
+            </p>
+            <p>
+                <label>Message:
+                    <textarea name="message"></textarea>
+                </label>
+            </p>
+            <div data-netlify-recaptcha></div>
+            <p>
+                <button type=”submit”>Send</button>
+            </p>
+        </form>
+    </div>
 </body>
+
 </html>
